remove test files in favor of just having a zip file that I use. example zip will uploaded to github shortly.